--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     {% include header.html %}
-</head>
+    <title>Klau</title></head>
 <body>
 
-    {{ content }}
-    
-    {% include footer.html %}
+{{ content }}
+
+{% include footer.html %}
 </body>
 </html>
