--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,35 @@
 <title>{{ site.title }}</title>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- Favicon links -->
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/icons/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/icons/apple-touch-icon.png">
+<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+<meta name="theme-color" content="#ffffff">
+
+<!-- Conditional stylesheets for legacy browsers -->
 <!--[if lte IE 8]>
-<script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-<link rel="stylesheet" href="assets/css/main.min.css"/>
+<script src="assets/js/ie/html5shiv.js" defer></script>
+<![endif]-->
+<link rel="stylesheet" href="assets/css/main.min.css" />
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
+<link rel="stylesheet" href="assets/css/ie9.css" />
+<![endif]-->
 <!--[if lte IE 8]>
-<link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
+<link rel="stylesheet" href="assets/css/ie8.css" />
+<![endif]-->
+
+<!-- Google Analytics -->
 {% if site.google_analytics %}
-<!-- Google Analytics (GA4) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', '{{ site.google_analytics }}');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', '{{ site.google_analytics }}');
 </script>
 {% endif %}
